Fix Brawl progress overflowing on small screens

--- a/src/components/BrawlProgress/index.css
+++ b/src/components/BrawlProgress/index.css
@@ -8,6 +8,7 @@
   padding: 0;
   margin: 2em auto;
   width: max-content; /* 2 */
+  font-size: 85%;
 }
 
 /**
